# scholar-cite

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/: scholar-cite
.claude/skills/scholar-cite/: SKILL.md  flags.md
.github/workflows/: publish-to-pypi.yml
docs/: ARCHITECTURE.md  design.md  e2e-verification.md  test-run-2026-04-19.md
examples/: classic_five.bib  demo_five_papers.py
src/scholar_cite/: __init__.py  __main__.py  browser_fetcher.py  citation.py  cli.py  models.py  ranking.py  search.py
tests/: test_browser_fetcher.py  test_citation.py  test_cli.py  test_ranking.py  test_search.py
tests/fixtures/: cite_popup_sample.html
